<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_section2">Contacts</string>
    <string name="title_section1">Chats</string>
    <string name="title_compose_message">Start chat</string>
    <string name="title_choose_recipient">Select Recipients</string>
    <string name="title_mythreemaid">My ${app_name_short} ID</string>
    <string name="title_threemaid">${app_name_short} ID</string>
    <string name="title_adduser">Add new contact</string>
    <string name="title_enter_id">Enter ID</string>
    <string name="title_invite_friend">Invite a Friend</string>
    <string name="invite_via">Invite a friend via…</string>
    <string name="invite_email_body">Hello,\n\nI use %1$s, the secure instant messenger that protects users’ privacy.\n\nMy ${app_name_short} ID: https://threema.id/%2$s\n\nLet’s communicate via %1$s!\n\nCheers,\n</string>
    <string name="invite_sms_body">Hi! Let’s use %1$s to communicate in a safe and privacy-compliant way! My ${app_name_short} ID: https://threema.id/%2$s</string>
    <string name="invite_email_subject">${app_name_short}. The secure messenger that protects our privacy</string>
    <string name="enter_id_hint">Enter ${app_name_short} ID</string>
    <string name="account_links">Linked accounts</string>
    <string name="title_set_availability_status">Availability status</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About ${app_name}</string>
    <string name="menu_add_contact">New contact</string>
    <string name="menu_done">Done</string>
    <string name="compose_message_and_enter">Tap here to type</string>
    <string name="title_job_title">Job Title</string>
    <string name="title_department">Department</string>
    <string name="send">Send</string>
    <string name="prefs_privacy">Privacy</string>
    <string name="prefs_notifications">Sound &amp; Notifications</string>
    <string name="prefs_chatdisplay">Chat</string>
    <string name="prefs_security">Security</string>
    <string name="prefs_sum_privacy">Privacy-related settings</string>
    <string name="prefs_sum_notifications">Set sound and vibration settings</string>
    <string name="prefs_sum_chatdisplay">Chat settings</string>
    <string name="prefs_masterkey">Encryption of locally stored data</string>
    <string name="prefs_header_contacts">Contacts</string>
    <string name="prefs_header_chat">Chat</string>
    <string name="prefs_header_reset">Reset</string>
    <string name="prefs_header_keyboard">Keyboard</string>
    <string name="prefs_sum_sync_contacts_on">Keep %s users in sync with your device’s address book</string>
    <string name="prefs_sum_sync_contacts_off">Do not sync %s users with your device’s address book</string>
    <string name="prefs_title_sync_contacts">Sync contacts</string>
    <string name="prefs_sum_block_unknown_off">Anybody can send you a message. New contacts will be added automatically when the first message arrives.</string>
    <string name="prefs_sum_block_unknown_on">Only people on your contact list can send you a message.</string>
    <string name="prefs_title_block_unknown">Block unknown</string>
    <string name="prefs_title_read_receipts">Send read receipts</string>
    <string name="prefs_title_typing_indicator">Send typing indicator</string>
    <string name="prefs_media_title">Media &amp; Storage</string>
    <string name="prefs_sum_media_title">Media and storage settings</string>
    <string name="prefs_image_size">Image dimensions</string>
    <string name="prefs_notification_sound">Notification Sound</string>
    <string name="prefs_sum_notification_sound">System default</string>
    <string name="prefs_vibrate">Vibrate</string>
    <string name="prefs_sum_vibrate">Vibrate on incoming message</string>
    <string name="prefs_notification_light">Notification light</string>
    <string name="prefs_sum_notification_light">Use color LED (if available) for incoming messages</string>
    <string name="prefs_title_wallpaper_switch">Wallpaper</string>
    <string name="prefs_title_enter">Enter to send</string>
    <string name="prefs_sum_enter_on">Enter key immediately sends message</string>
    <string name="prefs_sum_enter_off">Enter key adds a new line</string>
    <string name="prefs_system_notifications">Single Chat</string>
    <string name="prefs_inapp">In-app</string>
    <string name="prefs_inapp_sounds">In-app sounds</string>
    <string name="prefs_inapp_sounds_on">Play sound when sending/receiving messages</string>
    <string name="prefs_inapp_sounds_off">Do not play any in-app sounds</string>
    <string name="prefs_inapp_vibrate">In-app vibration</string>
    <string name="prefs_inapp_vibrate_on">Vibrate when receiving messages</string>
    <string name="prefs_inapp_vibrate_off">Do not vibrate when receiving messages</string>
    <string name="prefs_developers" translatable="false">Developer settings</string>
    <string name="workarounds">Workarounds</string>
    <string name="prefs_title_threema_push_switch">Use ${app_name_short} Push</string>
    <string name="prefs_sum_threema_push_on">Use ${app_name_short} Push to be notified about new messages</string>
    <string name="prefs_sum_threema_push_off">Check for new messages using system push service</string>
    <string name="prefs_logging">Logging</string>
    <string name="prefs_title_message_log_switch">Log to file</string>
    <string name="prefs_title_sum_message_log_on">Events and network information will be logged to the file debug_log.txt</string>
    <string name="prefs_title_sum_message_log_off">Events will not be logged</string>
    <string name="prefs_reset_push">Reset push token</string>
    <string name="prefs_sum_reset_push">Re-register the device for push notifications with FCM/HMS</string>
    <string name="prefs_notification_preview">Show message preview</string>
    <string name="prefs_sum_reset_ringtones">Restore system defaults</string>
    <string name="prefs_title_reset_ringtones">Reset notification sound settings</string>
    <string name="image_size_small">Small (640x640)</string>
    <string name="image_size_medium">Medium (1024x1024)</string>
    <string name="image_size_large">Large (1600x1600)</string>
    <string name="image_size_xlarge">X-Large (2592x2592)</string>
    <string name="image_size_original">Original size</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="please_wait">Please wait…</string>
    <string name="please_wait_timeout">This takes longer than expected</string>
    <string name="wizard_first_create_id">Creating your ${app_name_short} ID…</string>
    <string name="wizard1_sync_contacts">Syncing Contacts…</string>
    <string name="wizard2_email_hint">Enter your email address</string>
    <string name="wizard2_email_linking">Linking email to your ID</string>
    <string name="wizard2_phone_hint">Enter your mobile no.</string>
    <string name="wizard2_phone_number_confirm_title">Confirm number</string>
    <string name="wizard2_phone_number_confirm">We are about to send an SMS to:\n\n%1$s\n\nIs this number correct?</string>
    <string name="wizard2_phone_linking">Linking phone number to your ID</string>
    <string name="wizard3_nickname_hint">Enter your nickname</string>
    <string name="set_nickname_title">Set nickname</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="copy_message_action">Copy</string>
    <string name="delete_contact_action">Delete contact</string>
    <string name="delete_multiple_contact_action">Delete contacts</string>
    <string name="scan_id">Scan ID</string>
    <string name="id_scanned">ID scanned</string>
    <string name="id_mismatch">The public key that you have scanned does not match the key that the server has stored
        for this ID. This means that somebody has manipulated the scanned code, and that the key should not be trusted.</string>
    <string name="scan_successful">The ID has been successfully scanned and the contact is now verified.</string>
    <string name="scan_duplicate">This ID has already been scanned and verified.</string>
    <string name="linked_email">Email</string>
    <string name="linked_email_pattern">%1$s (%2$s)</string>
    <string name="linked_mobile">Mobile Number</string>
    <string name="linked_mobile_pattern">%1$s (%2$s)</string>
    <string name="public_nickname">Nickname</string>
    <string name="share_via">Share via…</string>
    <string name="share_subject">%s conversation</string>
    <string name="mobile_already_linked">Your ${app_name_short} ID is already linked to this mobile number</string>
    <string name="email_already_linked">Your ${app_name_short} ID is already linked to this email address</string>
    <string name="whoaaa">Notice</string>
    <string name="really_delete_message_title">Delete message</string>
    <string name="really_delete_thread">Delete chat</string>
    <string name="really_delete_multiple_threads">Delete chats</string>
    <string name="really_delete_contact">Do you really want to delete this contact and all associated messages?</string>
    <string name="image_placeholder">Image</string>
    <string name="invalid_threema_id">Invalid ${app_name_short} ID</string>
    <string name="close">Close</string>
    <string name="creating_contact">Adding new contact</string>
    <string name="creating_contact_successful">Contact successfully added</string>
    <string name="invalid_threema_qr_code">Invalid QR Code</string>
    <string name="threema_contact">${app_name_short} Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="os_licenses">Licenses</string>
    <string name="verify_title">Verifying Mobile Number</string>
    <string name="verify_success_text">Your mobile number has been successfully verified.</string>
    <string name="verify_failed">Failed</string>
    <string name="verify_failed_summary">Verifying your mobile number failed. Please make sure the number you entered is
        correct and you are connected to your mobile network before trying again.</string>
    <string name="verify_failed_not_linked">Verifying your mobile number failed. The verification process has been aborted.</string>
    <string name="backup_title">Export ID</string>
    <string name="backup_sum">Export your ${app_name_short} ID</string>
    <string name="backup_and_delete">Backup and delete</string>
    <string name="delete_id_title">Delete ID</string>
    <string name="enter_code_hint">Enter code</string>
    <string name="title_tab_groups">Groups</string>
    <string name="checklist_toggle_item">Toggle checklist item</string>
    <string name="checklist_delete_button">Delete</string>
    <string name="checklist_reorder_item">Move checklist item</string>
    <string name="new_wizard_done_title">You’re done!\nEverything correct?</string>
    <string name="pending_sms_verification_notice">Your mobile number is not yet verified.</string>
    <string name="pause">Pause</string>
    <string name="voice_message">Voice message</string>
    <string name="chats">Chats</string>
    <string name="global_search">Search chats</string>
    <string name="archived">Archived</string>
    <string name="disappearing_messages_summary">New messages in this chat will disappear after the selected time once they are read.</string>
    <string name="disappearing_duration_picker_title">Disappearing timer</string>
    <string name="disappearing_messages_unsupported">Disappearing messages only work between F1Whisper users and are not a security guarantee.</string>
</resources>