<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.search.SearchBar
                android:id="@+id/toolbar"
                style="@style/Threema.SearchBar.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/global_search"
                android:outlineProvider="none"
                app:navigationIcon="?attr/homeAsUpIndicator" />

            <include layout="@layout/connection_indicator" />

        </FrameLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_container">

            <com.google.android.material.chip.Chip
                android:id="@+id/chats"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/chats"
                app:checkedIconEnabled="true"
                app:ensureMinTouchTargetSize="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/groups"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/title_tab_groups"
                app:checkedIconEnabled="true"
                app:ensureMinTouchTargetSize="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/archived"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/archived"
                app:checkedIconEnabled="true"
                app:ensureMinTouchTargetSize="false"
                tools:checked="false" />

        </com.google.android.material.chip.ChipGroup>

    </com.google.android.material.appbar.AppBarLayout>

    <ch.threema.app.ui.EmptyRecyclerView
        android:id="@+id/recycler_chats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/tablet_additional_padding_horizontal"
        android:layout_marginEnd="@dimen/tablet_additional_padding_horizontal"
        android:background="?android:attr/colorBackground"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_global_search" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
