<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notice_sms_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="@dimen/notice_views_vertical_margin"
    android:layout_marginBottom="@dimen/notice_views_vertical_margin"
    android:clickable="false"
    android:visibility="visible"
    app:cardBackgroundColor="?android:attr/colorBackground"
    app:cardCornerRadius="@dimen/cardview_border_radius"
    app:cardElevation="@dimen/notice_views_elevation"
    app:strokeWidth="0dp"
    android:outlineProvider="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Threema.TextAppearance.BodyLarge"
            android:id="@+id/notice_sms_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="false"
            android:gravity="start"
            android:text="@string/pending_sms_verification_notice"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/notice_sms_button_cancel" />

        <com.google.android.material.button.MaterialButton
            style="@style/Threema.MaterialButton.Action"
            android:id="@+id/notice_sms_button_enter_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/enter_code_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notice_sms_text"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.button.MaterialButton
            style="@style/Threema.MaterialButton.Minimal"
            android:id="@+id/notice_sms_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            app:icon="@drawable/ic_close"
            app:iconTint="?attr/colorOnBackground"
            android:contentDescription="@string/cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
