<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/wizard_contents_padding_horizontal"
    tools:background="@android:color/black">

    <TextView
        android:id="@+id/wizard_welcome"
        style="@style/WizardTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_unit_x1"
        android:gravity="center_horizontal"
        android:text="@string/new_wizard_done_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/grid_unit_x0_5"
        android:layout_weight="1"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wizard_your_nickname"
                style="@style/WizardSummaryTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/wizard_paragraph_height"
                android:text="@string/public_nickname" />

            <LinearLayout
                android:id="@+id/wizard_nickname_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_unit_x1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/grid_unit_x1"
                    app:srcCompat="@drawable/ic_person_outline"
                    app:tint="?attr/colorOnBackground" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="24dp"
                    android:background="@color/wizard_alpha_background" />

                <TextView
                    android:id="@+id/wizard_nickname_preset"
                    style="@style/WizardSummaryBodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/grid_unit_x1"
                    tools:text="@tools:sample/first_names" />

            </LinearLayout>

            <View
                android:id="@+id/separator1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/grid_unit_x1_5"
                android:background="@color/wizard_alpha_background" />

            <TextView
                android:id="@+id/threema_safe"
                style="@style/WizardSummaryTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/wizard_summary_spacing"
                android:text="@string/threema_safe" />

            <LinearLayout
                android:id="@+id/safe_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_unit_x1"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/threema_safe_progress"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="@dimen/grid_unit_x1"
                    android:indeterminate="true"
                    android:maxWidth="24dp"
                    android:maxHeight="24dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/threema_safe_preset"
                    style="@style/WizardSummaryBodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="off" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ch.threema.app.activities.wizard.components.WizardButtonXml
        android:id="@+id/wizard_finish_compose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:wizardButton_text="@string/finish" />

</LinearLayout>
